AminoVault/src/styles/HeroSection.css
.hero-container {
  min-height: 80vh;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: flex-start;
  position: relative;
  overflow: hidden;
  background-image: url("../assets/Hero_img.webp");
  background-position: 50%;
  background-size: cover;
  color: #ffffff;
}

.hero-container::before {
  content: "";
  position: absolute;
  inset: 0;
  background-image: linear-gradient(135deg, #000000f2 34%, #000000a3 98%);
  opacity: 0.19;
  pointer-events: none;
}

@media (max-width: 1024px) {
  .hero-container {
    min-height: 90vh;
  }
}

@media (max-width: 767px) {
  .hero-container {
    min-height: 76vh;
    background-image: url("../assets/Hero_img_tall.webp");
    background-position: 100%;
    background-repeat: no-repeat;
  }

  .hero-container::before {
    background-image: linear-gradient(193deg, #000000f2 55%, #000000a3 73%);
    opacity: 0.34;
  }
}

.hero-overlay {
  width: 100%;
  height: 100%;
  padding: 20px 0;
  display: flex;
  justify-content: flex-start;
  position: relative;
}

.hero-content {
  width: 71%;
  max-width: 1320px;
  padding: 0 0 0 20px;
  display: flex;
  flex-direction: column;
  gap: 20px;
  position: relative;
  z-index: 1;
  color: #ffffff;
}

.hero-content .hero-subtitle,
.hero-content .hero-title,
.hero-content .feature-item,
.hero-content .feature-text,
.hero-content .btn-shop-now {
  color: #ffffff !important;
}

.hero-subtitle {
  font-family: "Michroma", sans-serif;
  font-size: 17px;
  font-weight: 600;
  line-height: 13px;
  letter-spacing: 2.1px;
  color: #ffffff;
  text-shadow: -6px 9px 5px #000;
  margin: 0;
}

.hero-title {
  font-family: "Michroma", sans-serif;
  font-size: 25px;
  font-weight: 700;
  line-height: 35px;
  letter-spacing: 0;
  text-transform: capitalize;
  color: #ffffff;
  text-shadow: -6px 9px 9px #000;
  margin-block-start: 0.5rem;
  margin-block-end: 1rem;
}

@media (max-width: 767px) {
  .hero-subtitle {
    font-size: 12px;
    letter-spacing: 0.3px;
    line-height: 22px;
  }

  .hero-title {
    font-size: 17px;
    letter-spacing: 1.2px;
    line-height: 1.3em;
  }
}

.hero-features {
  list-style-type: none;
  padding: 0;
  margin: 0;
  display: flex;
  flex-direction: column;
  gap: 20px;
}

.feature-item {
  display: flex;
  align-items: center;
  gap: 12px;
  font-family: "Mulish", sans-serif;
  font-size: 22px;
  font-weight: 400;
  line-height: 17px;
  letter-spacing: 0;
  word-spacing: 1px;
  color: #ffffff;
  text-shadow: -4px 4px 5px #000;
}

@media (max-width: 767px) {
  .feature-item {
    font-size: 14px;
    letter-spacing: 0.1px;
    word-spacing: 0;
    line-height: 1em;
  }
}

/* Icon Specific Styling */
.feature-icon {
  color: #ca33d2;
  font-size: 22px;
  width: 25px;
  display: flex;
  justify-content: center;
  align-items: center;
}

@media (max-width: 767px) {
  .feature-icon {
    font-size: 16px;
  }
}

.icofont-molecule {
  font-family: "IcoFont" !important;
  font-style: normal;
  font-weight: normal;
  display: inline-block;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
}

.btn-shop-now {
  display: inline-block;
  box-sizing: border-box;
  width: fit-content;
  padding: 10px 20px;
  font-family: "Michroma", sans-serif;
  font-size: 14px;
  font-weight: 700;
  line-height: 1;
  text-align: center;
  text-decoration: none;
  color: #ffffff;
  background-image: linear-gradient(90deg, #8801ff 0%, #e91831 100%);
  border-radius: 8px;
  box-shadow: -6px 6px 9px 5px rgb(0 0 0 / 50%);
  transition: background-image 0.3s;
  border: none;
  cursor: pointer;
}

.btn-shop-now:hover {
  background-image: linear-gradient(90deg, #e81832 0%, #8a42ca 100%);
}

